*Actualizacion activity Bebida *Actualizacion acitivy servicio *Captura de datos en el ativity Bebida con SharedPreferences *Actualizacion de los string *Instalacion de un plugin circleimageview

--- a/Lab1-UI/src/main/res/values-en-rAS/strings.xml
+++ b/Lab1-UI/src/main/res/values-en-rAS/strings.xml
@@ -7,4 +7,5 @@
     <string name="stxtNombre">Name</string>
     <string name="stxtHorario">Schedule</string>
     <string name="stxtTipo">Type</string>
+    <string name="smensaje">Select the drink</string>
 </resources>
