para que me dejara bajar actualizacion

--- a/Lab1-UI/src/main/res/values/strings.xml
+++ b/Lab1-UI/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="sPrecio">Precio</string>
     <string name="sIngredientes">Ingredientes</string>
     <string name="sRegistrar">Registrar</string>
+    <string name="smensaje">xxxxxxx</string>
 
 </resources>
