--- a/Lab1-UI/src/main/res/values/strings.xml
+++ b/Lab1-UI/src/main/res/values/strings.xml
@@ -1,23 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <string name="app_name">RestWEB</string>
-    <string name="mi_titulo">RESTAURANTE</string>
-    <string name="mi_titulo1">RESTAURANTE > SERVICIOS</string>
-    <string name="mi_titulo2">SERVICIO DE RESTAURANTE </string>
-    <string name="mi_titulo3">SERVICIO DE BAR</string>
-    <string name="stxtBienvenido">BIENVENIDOS</string>
-    <string name="sbtnServicios">SERVICIOS</string>
-    <string name="stxtNombre">Nombre</string>
-    <string name="stxtHorario">Horario</string>
-    <string name="stxtTipo">Tipo</string>
-    <string name="smensajebebida">Seleccionar la bebida</string>
-    <string name="sPrecio">Precio</string>
-    <string name="sIngredientes">Ingredientes</string>
-    <string name="sRegistrar">Registrar</string>
-    <string name="sMañana">Mañana</string>
-    <string name="sTarde">Tarde</string>
-    <string name="sNoche">Noche</string>
-    <string name="sTipo">Tipo</string>
-    <string name="sTiempo">Tiempo de preparación</string>
-    <string name="sEntrada">Entrada</string>
-    <string name="sPlato">Plato Fuerte</string>
+    <string name="app_name">RestMobile</string>
+    <string name="my_title1">RESTAURANT</string>
+    <string name="my_title2">RESTAURANT > SERVICES</string>
+    <string name="my_title3">RESTAURANT SERVICE</string>
+    <string name="my_title4">BAR SERVICE</string>
+    <string name="txt_name">Name</string>
+    <string name="txt_price">Price</string>
+    <string name="txt_ingredients">Ingredients</string>
+    <string name="txt_btn_register">Register</string>
+    <string name="txt_type">Type</string>
+    <string name="txt_schedule">Schedule</string>
+    <string name="txt_time">Time</string>
+    <string name="txt_btn_mainCourse">Main Course</string>
+    <string name="txt_btn_entry">Entry</string>
+    <string name="txt_chb_morning">Morning</string>
+    <string name="txt_chb_evening">Evening</string>
+    <string name="txt_chb_afternoon">Afternoon</string>
+    <string name="txt_welcome">Welcome</string>
 </resources>
