--- a/Lab2Activities/src/main/res/values/strings.xml
+++ b/Lab2Activities/src/main/res/values/strings.xml
@@ -20,6 +20,12 @@
     <string name="s_afternoon">Afternoon</string>
     <string name="s_welcome">Welcome</string>
 
+
+    <!-- Strings Fragment Services-->
+    <string name="s_plate">Plate</string>
+    <string name="s_drink">Drink</string>
+
+
     <!-- Strings Servicios_Activity_Navigation_Drawer -->
     <string name="s_close_navigation">Close</string>
 
@@ -44,4 +50,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="s_close_drawer">"Close "</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
