--- a/Lab2Activities/src/main/res/values/strings.xml
+++ b/Lab2Activities/src/main/res/values/strings.xml
@@ -21,7 +21,6 @@
     <string name="s_welcome">Welcome</string>
 
 
-
     <!-- Strings Fragment Configuration-->
     <string name="s_name_loguin">Name</string>
     <string name="s_pass_loguin">Pass</string>
@@ -65,4 +64,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_loguin">LoguinActivity</string>
 </resources>
