--- a/Lab2Activities/src/main/res/values-es-rCO/strings.xml
+++ b/Lab2Activities/src/main/res/values-es-rCO/strings.xml
@@ -34,4 +34,6 @@
     <string name="s_register_user">Registrar</string>
     <string name="s_name_user">Nombre</string>
     <string name="s_create_Account">Crear Cuenta</string>
+    <string name="s_price_list_drink">Precio</string>
+    <string name="s_name_list_drink">Nombre</string>
 </resources>
