1. Frament LisFoodFragment 2. Se vinculo el fragmento con el Navigation

--- a/Lab2Activities/src/main/res/values-es-rCO/strings.xml
+++ b/Lab2Activities/src/main/res/values-es-rCO/strings.xml
@@ -36,4 +36,8 @@
     <string name="s_create_Account">Crear Cuenta</string>
     <string name="s_price_list_drink">Precio</string>
     <string name="s_name_list_drink">Nombre</string>
+    <string name="s_name_list_food">Nombre</string>
+    <string name="s_type_list_food">Tipo</string>
+    <string name="s_price_list_food">Precio</string>
+    <string name="s_time_list_food">Tiempo de preparación</string>
 </resources>
