1. Factorizacion Gestion de datos 2. Diseño base de datos local (bdrestaurant)

--- a/Lab2Activities/src/main/res/values-es-rCO/strings.xml
+++ b/Lab2Activities/src/main/res/values-es-rCO/strings.xml
@@ -57,4 +57,5 @@
     <string name="s_time_p">Tiempo de P.</string>
     <string name="s_title_about">Titulo</string>
     <string name="s_information_about">Informacion</string>
+    <string name="s_food">Plato</string>
 </resources>
