--- a/Lab2Activities/src/main/res/values/strings.xml
+++ b/Lab2Activities/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
 
     <!-- Strings Fragment Services-->
     <string name="s_plate">Plate</string>
+    <string name="s_food">Food</string>
     <string name="s_drink">Drink</string>
 
 
