--- a/Lab2Activities/src/main/res/values-es-rCO/strings.xml
+++ b/Lab2Activities/src/main/res/values-es-rCO/strings.xml
@@ -58,4 +58,6 @@
     <string name="s_title_about">Titulo</string>
     <string name="s_information_about">Informacion</string>
     <string name="s_food">Plato</string>
+    <string name="s_cancel">Cancelar</string>
+    <string name="s_favourite">Favorito</string>
 </resources>
