--- a/lab3servicesgr02/src/main/res/values/strings.xml
+++ b/lab3servicesgr02/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
 
+    <!-- Strings Web services -->
+    <!-- Activity FOOD -->
+    <string name="s_web_insert_full">Insert full</string>
+    <string name="s_web_loading">Loading...</string>
+    <string name="s_web_not_register">Could not register</string>
+    <string name="s_web_not_query">The query could not be</string>
+
     <string name="app_name">RestMobile</string>
     <string name="s_app_name">RestMobile</string>
     <string name="s_my_title1">RESTAURANT</string>
