1. Base de datos Remota 000webhost 2. Servidor : https://restauranteudea.000webhostapp.com 3. Configuracion server remoto credenciales Json    $hostname_localhost="localhost";    $database_localhost="id7451289_bd_restaurante";    $username_localhost="id7451289_grupo02";    $password_localhost="123456"; 4.Servicios a consumir  wsJSONConsultarListaC.php  wsJSONRegistroC.php

--- a/lab3servicesgr02/src/main/res/values/strings.xml
+++ b/lab3servicesgr02/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
 
+
+
+
+    <!-- 000WebHost -->
+    <string name="s_ip_000webhost">https://restauranteudea.000webhostapp.com</string>
+
+
     <!-- Strings Web services -->
     <!-- Activity FOOD -->
     <string name="s_web_insert_full">Insert full</string>
