1. Cargar imagen de los platos desde url    - Mediante la funcion openPhotoUrl(Sring, ViewHolderDatos)    - Creacion de una string de error de carga de imagen

--- a/lab3servicesgr02/src/main/res/values-es-rCO/strings.xml
+++ b/lab3servicesgr02/src/main/res/values-es-rCO/strings.xml
@@ -68,4 +68,5 @@
     <string name="s_web_loading">Cargando ......</string>
     <string name="s_web_not_register">No se pudo registrar</string>
     <string name="s_web_not_query">"No se pudo la consulta "</string>
+    <string name="s_web_not_photo">Error al cargar la imagen</string>
 </resources>
