1. Patron singleton VolleySingleton 2. Validador de campos en FoodActivity 3. Refactorizacion wsjSONRegistroC

--- a/lab3servicesgr02/src/main/res/values-es-rCO/strings.xml
+++ b/lab3servicesgr02/src/main/res/values-es-rCO/strings.xml
@@ -69,4 +69,5 @@
     <string name="s_web_not_register">No se pudo registrar</string>
     <string name="s_web_not_query">"No se pudo la consulta "</string>
     <string name="s_web_not_photo">Error al cargar la imagen</string>
+    <string name="s_web_not_conexion">Sin conexion a internet</string>
 </resources>
