--- a/lab3servicesgr02/src/main/res/values/strings.xml
+++ b/lab3servicesgr02/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="s_web_not_register">Could not register</string>
     <string name="s_web_not_query">The query could not be</string>
     <string name="s_web_not_photo">Error when loading the image</string>
+    <string name="s_web_not_conexion">No internet connection</string>
+
 
     <string name="app_name">RestMobile</string>
     <string name="s_app_name">RestMobile</string>
