--- a/Lab4FCM/src/main/res/values-es-rCO/strings.xml
+++ b/Lab4FCM/src/main/res/values-es-rCO/strings.xml
@@ -71,4 +71,7 @@
     <string name="s_web_not_photo">Error al cargar la imagen</string>
     <string name="s_web_not_conexion">Sin conexion a internet</string>
     <string name="s_web_syncronizar">Actualiz Platos-Bebidas</string>
+    <string name="s_Firebase_loguin_google">Google</string>
+    <string name="s_Firebase_loguin_user">Usuario</string>
+    <string name="s_Firebase_loguin_opciones">Loguin</string>
 </resources>
