--- a/Lab4FCM/src/main/res/values/strings.xml
+++ b/Lab4FCM/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="s_Firebase_loguin_opciones">Loguin</string>
     <string name="s_Firebase_loguin_google">Google</string>
     <string name="s_Firebase_loguin_user">User</string>
+    <string name="s_Google_Autenticacion_fallo">Authentication failed.Google service"</string>
+    <string name="s_Google_verificar">Check</string>
 
     <!-- 000WebHost -->
     <string name="s_ip_000webhost">https://restauranteudea.000webhostapp.com</string>
