--- a/Lab4FCM/src/main/res/values/strings.xml
+++ b/Lab4FCM/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="s_gestonar">Manage</string>
     <string name="s_Firebase_registro">Successful Registration</string>
     <string name="s_Firebase_user_no_valido">Invalid user</string>
+    <string name="s_Firebase_user_eliminar">Delete user</string>
+    <string name="s_Firebase_user_eliminar_continua">confirm</string>
+
 
     <!-- 000WebHost -->
     <string name="s_ip_000webhost">https://restauranteudea.000webhostapp.com</string>
